# benchmarking

./: .gitignore  .gitmodules  PERFORMANCE.md  README.md
bench_surreal_deal/: .gitignore  pyproject.toml
bench_surreal_deal/mongodb/: create_bench_report.py  define_mongodb_bench.py
bench_surreal_deal/mongodb/output_files/: Bench_report_output.md  mongodb_bench_output.json  surrealdb_bench_output.json
bench_surreal_deal/output_files/: Bench_report_output.md  mongodb_bench_output.json  surrealdb_bench_output.json
bench_surreal_deal/queries/: queries.mongodb  queries.surql  test.mongodb
bench_surreal_deal/scripts/: bench_test_mongoDB.ipynb  bench_utils.py  create_bench_report.py  define_mongodb_bench.py  define_surrealdb_bench.py  mongo_db_bench.ipynb  mongodb_bench.ipynb  mongodb_bench.py  run_mongodb_bench.py  run_surrealdb_bench.py  surrealdb_bench.ipynb  surrealdb_bench.py  surrealdb_bench_create.ipynb
bench_surreal_deal/scripts/old/: mongodb_bench_without_functions.py  surrealdb_bench.ipynb  surrealdb_bench_create.ipynb  surrealdb_bench_no_functions.py
bench_surreal_deal/scripts/old/queries/: queries.mongodb  queries.surql
crud-bench/: Cargo.toml  README.md
go-ycsb/: README.md  go.mod  go.sum
platform/: README.md  bash-pod.yaml  fdb-cluster.yaml  surrealdb-fdb.yaml  surrealdb-rocksdb.yaml  surrealdb-tikv.yaml  tikv-cluster.yaml
python_microbenchmark/: README.md  pyproject.toml
python_microbenchmark/export/: warmup.json
python_microbenchmark/work/: bench.py  bench_queries.json
supabench/: Dockerfile  README.md  (+2 more)
surreal-deal/arangodb/: README.md  bench_utils.py  create_bench_report.py  define_arangodb_bench.py  define_surrealdb_bench.py  generate_arangodb_data.py  generate_surrealdb_data.py  pyproject.toml  run_arango_bench.py  run_surrealdb_bench.py
surreal-deal/arangodb/output_files/: Bench_report_output.md  arangodb_bench_output.json  surrealdb_bench_output.json
surreal-deal/arangodb/output_files/arangodb_data/: artist_data.json  person_data.json  product_data.json  review_data.json
surreal-deal/arangodb/output_files/surrealdb_data/: artist_data.json  person_data.json  product_data.json  review_data.json
surreal-deal/mongodb/: README.md  pyproject.toml  run_mongodb_bench.py  run_surrealdb_bench.py
(+33 files in other folders)
