[tool.poetry]
name = "microbench"
version = "0.1.0"
description = ""
authors = ["Alexander <post@alexanderfridiksson.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
surrealdb = "^0.3.0"
pymongo = "^4.4.1"
numpy = "^1.25.2"
httpx = "^0.24.1"
altair = "^5.1.1"
vega-datasets = "^0.9.0"
altair-saver = "^0.5.0"
vl-convert-python = "^0.13.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
mimesis = "^10.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
