[tool.poetry]
name = "bench-surreal-deal"
version = "0.1.0"
description = "internal benchmark"
authors = ["Alexander <post@alexanderfridiksson.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.4.1"
mimesis = "^11.1.0"
ipykernel = "^6.26.0"
pymongoexplain = "^1.2.0"
numpy = "^1.26.3"
tabulate = "^0.9.0"
# surrealdb-beta = {git = "https://github.com/surrealdb/surrealdb.py", rev = "rust-remove-tokio"}
surrealdb-beta = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"